; ModuleID = '/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-results-data.c_filter_pairs_hostid_result.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/copyexec/extr_copyexec-results-data.c_filter_pairs_hostid_result.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pair_hostid_result = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pair_hostid_result*, i32*, i32, i32)* @filter_pairs_hostid_result to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @filter_pairs_hostid_result(%struct.pair_hostid_result* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.pair_hostid_result*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  store %struct.pair_hostid_result* %0, %struct.pair_hostid_result** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  store i32 0, i32* %10, align 4
  store i32 0, i32* %9, align 4
  br label %11

11:                                               ; preds = %45, %4
  %12 = load i32, i32* %9, align 4
  %13 = load i32*, i32** %6, align 8
  %14 = load i32, i32* %13, align 4
  %15 = icmp slt i32 %12, %14
  br i1 %15, label %16, label %48

16:                                               ; preds = %11
  %17 = load %struct.pair_hostid_result*, %struct.pair_hostid_result** %5, align 8
  %18 = load i32, i32* %9, align 4
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds %struct.pair_hostid_result, %struct.pair_hostid_result* %17, i64 %19
  %21 = getelementptr inbounds %struct.pair_hostid_result, %struct.pair_hostid_result* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* %8, align 4
  %24 = and i32 %22, %23
  %25 = load i32, i32* %7, align 4
  %26 = icmp eq i32 %24, %25
  br i1 %26, label %27, label %44

27:                                               ; preds = %16
  %28 = load i32, i32* %10, align 4
  %29 = load i32, i32* %9, align 4
  %30 = icmp slt i32 %28, %29
  br i1 %30, label %31, label %41

31:                                               ; preds = %27
  %32 = load %struct.pair_hostid_result*, %struct.pair_hostid_result** %5, align 8
  %33 = load i32, i32* %10, align 4
  %34 = sext i32 %33 to i64
  %35 = getelementptr inbounds %struct.pair_hostid_result, %struct.pair_hostid_result* %32, i64 %34
  %36 = load %struct.pair_hostid_result*, %struct.pair_hostid_result** %5, align 8
  %37 = load i32, i32* %9, align 4
  %38 = sext i32 %37 to i64
  %39 = getelementptr inbounds %struct.pair_hostid_result, %struct.pair_hostid_result* %36, i64 %38
  %40 = call i32 @memcpy(%struct.pair_hostid_result* %35, %struct.pair_hostid_result* %39, i32 4)
  br label %41

41:                                               ; preds = %31, %27
  %42 = load i32, i32* %10, align 4
  %43 = add nsw i32 %42, 1
  store i32 %43, i32* %10, align 4
  br label %44

44:                                               ; preds = %41, %16
  br label %45

45:                                               ; preds = %44
  %46 = load i32, i32* %9, align 4
  %47 = add nsw i32 %46, 1
  store i32 %47, i32* %9, align 4
  br label %11

48:                                               ; preds = %11
  %49 = load i32, i32* %10, align 4
  %50 = load i32*, i32** %6, align 8
  store i32 %49, i32* %50, align 4
  ret void
}

declare dso_local i32 @memcpy(%struct.pair_hostid_result*, %struct.pair_hostid_result*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
